# z2p-newsletter

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
