[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.11.0"
uuid = { version = "1.3.1", features= ["v4"] }
chrono = "0.4.24"
tracing = { version = "0.1.27", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.0"
once_cell = "1.17.1"
secrecy = {version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.7.4"

# Using table-like toml syntax to avoid really long line
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11.16"
